--- a/W7D5/cats99/app/views/cats/_form.html.erb
+++ b/W7D5/cats99/app/views/cats/_form.html.erb
@@ -18,13 +18,14 @@
 
   <label for="cat_color">Color</label>
   <select name="cat[color]" id="cat_color">
-    <option disabled selected>select a color</option>
-    <option value="red">red</option>
-    <option value="yellow">yellow</option>
-    <option value="white">white</option>
-    <option value="black">black</option>
-    <option value="brown">brown</option>
-    <option value="multi-color">multi-color</option>
+  <option disabled selected>-- select a color --</option>
+    <% Cat::CAT_COLORS.each do |color| %>
+      <option
+        <%= cat.color == color ? "selected" : "" %>
+        value="<%= color %>">
+        <%= color.upcase %>
+      </option>
+    <% end %>
   </select>
   <br>
 
