add rental view

--- a/W7D5/cats99/app/views/cats/_form.html.erb
+++ b/W7D5/cats99/app/views/cats/_form.html.erb
@@ -32,7 +32,7 @@
   <label for="cat_birth_date">Birthday</label>
   <input
     type="date"
-    name="cat[birth_date"
+    name="cat[birth_date]"
     id="cat_birth_date"
     value="<%= cat.birth_date %>" />
   <br>
