--- a/W7D5/cats99/app/views/cats/show.html.erb
+++ b/W7D5/cats99/app/views/cats/show.html.erb
@@ -11,4 +11,18 @@
       <td><%= @cat.send(attr_name) %></td>
     </tr>
   <% end %>
+
+
+<h2>Rental Requests</h2>
+<table>
+  <tr>
+    <th>Start Date</th>
+    <th>End Date</th>
+    <th>Status</th>
+  </tr>
+  <% @cat.rental_requests.order('start_date').each do |req| %>
+    <td><%= req.start_date %></td>
+    <td><%= req.end_date %></td>
+    <td><%= req.status %></td>
+  <% end %>
 </table>
