--- a/W7D5/cats99/app/views/cats/show.html.erb
+++ b/W7D5/cats99/app/views/cats/show.html.erb
@@ -20,9 +20,32 @@
     <th>End Date</th>
     <th>Status</th>
   </tr>
+  <tr>
   <% @cat.rental_requests.order('start_date').each do |req| %>
     <td><%= req.start_date %></td>
     <td><%= req.end_date %></td>
-    <td><%= req.status %></td>
+    <td>
+      <% if req.pending? %>
+        <form action="<%= approve_cat_rental_request_url(req) %>" method="post">
+          <input 
+            type="hidden"
+            name="authenticity_token"
+            value="<%= form_authenticity_token %>">
+          <input type="submit" value="Approve">
+        </form>
+        <form action="<%= approve_cat_rental_request_url(req) %>" method="post">
+          <input 
+            type="hidden"
+            name="authenticity_token"
+            value="<%= form_authenticity_token %>">
+          <input type="submit" value="Deny">
+        </form>
+      <% else %>
+        <%= req.status %>
+      <% end %>
+    </td>
+  </tr>
   <% end %>
+
+
 </table>
