--- a/W8D2/MusicApp/app/assets/stylesheets/application.css
+++ b/W8D2/MusicApp/app/assets/stylesheets/application.css
@@ -13,3 +13,4 @@
  *= require_tree .
  *= require_self
  */
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pacifico&display=swap");
