--- a/W8D2/MusicApp/app/views/challenges/show.html.erb
+++ b/W8D2/MusicApp/app/views/challenges/show.html.erb
@@ -1,5 +1,14 @@
 <h1><%=@challenge.name%></h1>
 
+
+<%= render "note/form", challenge: @challenge %>
+
+<h4 class='sub-header'>Notes</h4>
+
+<% @challenge.notes.each do |note| %>
+  <%= render "note/note", note: note %>
+<% end %>
+
 <ul class='page-links'>
   <li><a class='button' href="<%= edit_challenge_url(@challenge) %>">Edit Challenge</a></li>
   <li>
