--- a/W8D2/MusicApp/app/views/note/_note.html.erb
+++ b/W8D2/MusicApp/app/views/note/_note.html.erb
@@ -1,7 +1,7 @@
 <div class='note-item'>
-  <p><%= note.content %></p>
+  <p><%= simple_format (note.content) %></p>
   <div class='note-item-info'>
-    <p> by: <%= note.user.email %></p>
+    <p> at: <%= note.created_at.strftime('%F %T') %></p>
 
     <% if note.user_id == current_user.id %>
       <form action="<%= note_url(note) %>" method="POST">
