--- a/W8D2/MusicApp/app/views/user_mailer/welcome_email.html.erb
+++ b/W8D2/MusicApp/app/views/user_mailer/welcome_email.html.erb
@@ -9,8 +9,12 @@
       You have successfully signed up to example.com,
       your username is: <%= @user.email %>.<br />
     </p>
+    <p>Please active your account :
+    <a href="<%=activate_users_url(activation_token: @user.activation_token) %>">Actavite</a>
+    </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      If you can't click the button, just follow this link: 
+      <%= activate_users_url(activation_token: @user.activation_token) %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
