--- a/W8D2/MusicApp/app/views/challenges/show.html.erb
+++ b/W8D2/MusicApp/app/views/challenges/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%=@challenge.name%></h1>
-<h2><%=@challenge.start_date%></h2>
+<h2>Start Date: <%=@challenge.start_date.strftime('%F')%></h2>
 
 <%= render "note/form", challenge: @challenge %>
 
