--- a/W8D2/MusicApp/app/views/note/_form.html.erb
+++ b/W8D2/MusicApp/app/views/note/_form.html.erb
@@ -1,20 +1,24 @@
+<% if @challenge.start_date < Time.now %>
+  <h4 class='sub-header'>New Note</h4>
 
-<h4 class='sub-header'>New Note</h4>
+  <form class='form' action="<%= notes_url %>" method="POST">
+    <input
+      type="hidden"
+      name="authenticity_token"
+      value="<%= form_authenticity_token %>">
 
-<form class='form' action="<%= notes_url %>" method="POST">
-  <input
-    type="hidden"
-    name="authenticity_token"
-    value="<%= form_authenticity_token %>">
+    <input type="hidden" name="note[challenge_id]" value="<%= @challenge.id %>">
 
-  <input type="hidden" name="note[challenge_id]" value="<%= @challenge.id %>">
+    <p>
+      <label for="note_content">Content</label>
+      <textarea id="note_content"
+        rows="7" cols="30"
+        name="note[content]"></textarea>
+    </p>
 
-  <p>
-    <label for="note_content">Content</label>
-    <textarea id="note_content"
-      rows="7" cols="30"
-      name="note[content]"></textarea>
-  </p>
-
-  <input type="submit">
-</form>
+    <input type="submit">
+  </form>
+<% else %>
+  <h3><%=(challenge.start_date.to_date - Time.now.to_date).to_i %></h3>
+   <p>Days to start</p>
+<% end %>
