--- a/W8D2/MusicApp/app/views/note/_note.html.erb
+++ b/W8D2/MusicApp/app/views/note/_note.html.erb
@@ -1,7 +1,7 @@
 <div class='note-item'>
+    <p> Day: <%= (note.created_at.to_date - note.challenge.start_date.to_date).to_i %></p>
+
   <p><%= simple_format(note.content) %></p>
-  <div class='note-item-info'>
-    <p> at: <%= note.created_at.strftime('%F %T') %></p>
 
     <% if note.user_id == current_user.id %>
       <form action="<%= note_url(note) %>" method="POST">
@@ -10,5 +10,4 @@
         <input type="submit" value="Destroy ">
       </form>
     <% end %>
-  </div>
 </div>
