--- a/W8D4/AATimes/app/assets/stylesheets/base/layout.scss
+++ b/W8D4/AATimes/app/assets/stylesheets/base/layout.scss
@@ -1,31 +1,35 @@
 /* Define application-wide selectors here!*/
 
 html {
-	position: relative;
-	height: 100%;
+  position: relative;
+  height: 100%;
 }
 
 body {
-	// ...
+  width: 80%;
+  //center
+  margin: 0, auto;
+  font-family: $serif;
+  font-size: 12px;
 }
 
 button {
-	// background-color:
-	// border-color:
-	// color:
-	// font-weight:
-	// padding:
-	// border-radius:
-	// transition:
-	// font-family:
-	// text-transform:
-	// font-size:
-	// text-align:
+  // background-color:
+  // border-color:
+  // color:
+  // font-weight:
+  // padding:
+  // border-radius:
+  // transition:
+  // font-family:
+  // text-transform:
+  // font-size:
+  // text-align:
 }
 
 button:hover {
-	// background-color:
-	// border-color:
+  // background-color:
+  // border-color:
 }
 
 /*
@@ -33,17 +37,18 @@ button:hover {
 */
 
 hr {
-	border: 0;
-	height: 1px;
-	background-color: $light-gray;
+  border: 0;
+  height: 1px;
+  background-color: $light-gray;
 }
 
-.hr-top, .hr-bottom {
-	width: 100%;
-	margin: 0;
+.hr-top,
+.hr-bottom {
+  width: 100%;
+  margin: 0;
 }
 
 .hr-top {
-	height: 2px;
-	margin-bottom: 1px;
+  height: 2px;
+  margin-bottom: 1px;
 }
