--- a/W8D4/css positioning and media queries/assets/positioning_media_queries.css
+++ b/W8D4/css positioning and media queries/assets/positioning_media_queries.css
@@ -110,7 +110,43 @@ label {
   display: block;
 }
 
+.hamburger-dropdown {
+  display: none;
+}
 /* Media Queries! */
 @media all and (max-width: 900px) {
   /* Code Goes Here */
+  .col {
+    min-width: 550px;
+  }
+  nav ul {
+    display: none;
+  }
+
+  .hamburger-dropdown {
+    display: block;
+  }
+  .hamburger-dropdown > li {
+    background: url(./hamburger.png);
+    background-size: 50px 50px;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    cursor: pointer;
+  }
+  .hamburger-dropdown ul {
+    position: absolute;
+    display: none;
+    top: 50px;
+    flex-direction: column;
+    cursor: pointer;
+    box-shadow: black 5px 5px 10px;
+  }
+  .hamburger-dropdown:hover ul {
+    display: block;
+    background-color: white;
+  }
+  .hamburger-dropdown ul li:hover a {
+    text-decoration: underline;
+  }
 }
