--- a/W8D4/css review/css/01-header.css
+++ b/W8D4/css review/css/01-header.css
@@ -2,17 +2,25 @@
 
 body {
   /* Write your css here... */
-
+  font-family: sans-serif;
+  font-weight: 400;
 }
 
 .header {
-
+  background-color: #f00;
+  color: #fff;
+  font-weight: 700;
+  border-bottom: 1px darkgray solid;
 }
 
 .header a {
-
+  display: block;
+  padding: 10px 20px;
 }
 
 .header-nav {
-
+  width: 900px;
+  margin: auto;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
 }
