add Phase 2: Navigation

--- a/W8D4/css review/css/02-navigation.css
+++ b/W8D4/css review/css/02-navigation.css
@@ -1,21 +1,23 @@
 /* PHASE 2: Navigation */
 
 .header-logo {
-
+  float: left;
+  border-right: 1px solid #ccc;
 }
 
 .header-logo:hover {
-
+  background-color: black;
 }
 
 .header-list {
-
+  float: right;
 }
 
 .header-list > li {
-
+  float: left;
+  border-left: 1px solid #ccc;
 }
 
 .header-list > li:hover {
-
+  background-color: black;
 }
