--- a/W8D4/css review/css/01-header.css
+++ b/W8D4/css review/css/01-header.css
@@ -4,6 +4,7 @@ body {
   /* Write your css here... */
   font-family: sans-serif;
   font-weight: 400;
+  background-color: blanchedalmond;
 }
 
 .header {
