--- a/W8D4/AATimes/app/assets/stylesheets/components/_sections_nav.scss
+++ b/W8D4/AATimes/app/assets/stylesheets/components/_sections_nav.scss
@@ -23,3 +23,9 @@
   font-size: 10px;
   text-decoration: none;
 }
+
+@media all and (max-width: 1000px) {
+  .sections-nav {
+    display: none;
+  }
+}
