add search modal

--- a/W8D4/AATimes/app/assets/stylesheets/components/_sections_sidebar.scss
+++ b/W8D4/AATimes/app/assets/stylesheets/components/_sections_sidebar.scss
@@ -77,7 +77,7 @@
   position: relative;
 }
 
-.sections-sidebar .dropdown ul {
+.sections-sidebar .dropdown > ul {
   display: none;
   position: absolute;
   left: 165px;
