--- a/W8D4/AATimes/app/views/shared/_sections_sidebar.html.erb
+++ b/W8D4/AATimes/app/views/shared/_sections_sidebar.html.erb
@@ -1,42 +1,55 @@
 <nav id="sections-sidebar" class="sections-sidebar">
   <ul>
-    <li class="dropdown">San Francisco</li>
-    <ul>
-        <li class="sub-header">San Francisco</li>
-        <li>Students</li>
-        <li>Teaching Assistants</li>
-        <li>Instructors</li>
-        <li>Career Advisors</li>
-        <li>Cats</li>
-    </ul>
-    <li class="dropdown">Bootcamp Prep</li>
-    <ul>
-        <li class="sub-header">Bootcamp Prep</li>
-        <li>Students</li>
-        <li>Instructors</li>
-        <li>Cats</li>
-      </ul>
-    <li class="dropdown">Online
+    <li >San Francisco</li>
+      <section class="dropdown">
+        <ul>
+            <li class="sub-header">San Francisco</li>
+            <li>Students</li>
+            <li>Teaching Assistants</li>
+            <li>Instructors</li>
+            <li>Career Advisors</li>
+            <li>Cats</li>
+        </ul>
+      </section>
+    <li >Bootcamp Prep</li>
+    <section class="dropdown">
       <ul>
-          <li class="sub-header">Online
+          <li class="sub-header">Bootcamp Prep</li>
+          <li>Students</li>
+          <li>Instructors</li>
+          <li>Cats</li>
+        </ul>
+  </section>
+    <li >Online</li>
+        <section class="dropdown">
+      <ul>
+        <li>Online
         <li>Immersive</li>
         <li>Bootcamp Prep</li>
         <li>Cats</li>
-      </ul>       
-    <li class="dropdown">Sales</li>
-      <ul>
-        <li class="sub-header">Sales</li>
+      </ul>   
+    </section>
+    
+    <li >Sales</li>
+        <section class="dropdown">
+        <ul>
+        <li>Sales</li>
         <li>Associates</li>
         <li>Analytics</li>
         <li>Cats</li>
       </ul> 
-    <li class="dropdown">Alumni</li>
+           </section>
+
+    <li >Alumni</li>
+    <section class="dropdown">
       <ul>
-        <li class="sub-header">Alumni</li>
+        <li >Alumni</li>
         <li>Students</li>
         <li>Companies</li>
         <li>Opinions</li>
         <li>Cats</li>
       </ul>
+     </section>
+
   </ul>
 </nav>
