--- a/W11D1/css-friends-12/skeleton/css/12-modal.css
+++ b/W11D1/css-friends-12/skeleton/css/12-modal.css
@@ -1,1 +1,52 @@
 /* PHASE 12: Modal */
+.modal-screen{
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.8);
+    /* stretch it out to fill the entire screen */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* have it sit in front of everything else on the page */
+    z-index: 2;
+}
+
+.modal-form{
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    margin-left: -220px;
+    width: 360px;
+    padding:20px;
+    z-index: 3;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 1px solid #000;
+}
+
+.modal-close{
+    position: absolute;
+    top: 10px;
+    left: 90%;
+    font-size: 36px;
+    cursor: pointer;
+}
+.modal-close:hover{
+    color: red;
+}
+
+.modal-form h1{
+    font-size: 36px;
+    font-weight: 300;
+    line-height:1
+}
+.modal-form p{
+    margin-bottom: 20px;
+}
+
+.modal{
+    display: none;
+}
+.modal.is-open{
+    display: block;
+}
