--- a/W10D4/AJAX Twitter/app/views/follows/_form.html.erb
+++ b/W10D4/AJAX Twitter/app/views/follows/_form.html.erb
@@ -1,4 +1,3 @@
-<button class="follow-toggle" 
-        data-user-id="<%= user.id%>"
-        intial-follow-state="<%= current_user.follows?(user) ? 'followed' : 'unfollowed' %>">
-</button>
+<button class="follow-toggle"
+  data-user-id="<%= user.id %>"
+  data-initial-follow-state="<%= current_user.follows?(user) ? 'followed' : 'unfollowed' %>"></button>
