--- a/W10D4/AJAX Twitter/app/views/users/search.html.erb
+++ b/W10D4/AJAX Twitter/app/views/users/search.html.erb
@@ -1,19 +1,5 @@
 <h1>Search!</h1>
-
-<form action="/users/search" method="GET">
-  <input
-    type="text"
-    name="query"
-    value="<%= @query %>">
-
-  <input type="submit" value="Search Users!">
-</form>
-
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <a href="<%= user_url(user) %>"><%= user.username %></a>
-      <%= render 'follows/form', user: user %>
-    </li>
-  <% end %>
-</ul>
+<nav class="users-search">
+  <input type="text" class='user-search-input' name = "user_query">
+  <ul class="users"></ul>
+</nav>
