--- a/W10D4/AJAX Twitter/app/views/users/search.html.erb
+++ b/W10D4/AJAX Twitter/app/views/users/search.html.erb
@@ -3,3 +3,20 @@
   <input type="text" class='user-search-input' name = "user_query">
   <ul class="users"></ul>
 </nav>
+<%# 
+<h2 class='page-header'>Search!</h2>
+
+<div class='users-search'>
+<form class="simple-form">
+  <div>
+    <label for='user-search-input'>Username</label>
+    <input class='user-search-input' 
+      type="text" 
+      name="username"
+      placeholder='Enter a username'>
+  </div>
+</form>
+
+<h4>Results</h4>
+<ul class="users"></ul>
+</div> %>
